[metadata]
name = pywoo
version = 1.0.0
description = Python wrapper for querying WooCommerce API
long_description = file: README.rst
url = https://github.com/lotrekagency/pywoo
license = MIT
author = Lotrèk
author_email = dimmitutto@lotrek.it
keywords = woocommerce, wordpress, api
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
[options]
packages =
    pywoo
    pywoo.models
    pywoo.utils
python_requires = >= 3.0.*
install_requires =
    requests==2.22.0
    requests-oauthlib==1.2.0
[bdist_wheel]
universal=true